finished header and added finished html.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,21 @@
 
 <body>
     <div class="container">
+        <header>
+            <nav>
+                <ul>
+                    <img src="img/lambda-black.png">
+                    <li><a href="">Home</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Products</a></li>
+                    <li><a href="">Blog</a></li>
+                    <li><a href="">Contact</a></li>
+                </ul>
+            </nav>    
+        </header>
+        
+
+        <img id="jumboLaser" src="img/jumbo.jpg">
    
         <section class="top-content">
             <div class="text-container">
