--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
                     <img src="img/lambda-black.png">
                     <li><a href="./index.html">Home</a></li>
                     <li><a href="#">About</a></li>
-                    <li><a href="#">Products</a></li>
+                    <li><a href="./products.html">Products</a></li>
                     <li><a href="#">Blog</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
