--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <img src="img/lambda-black.png">
                     <li><a href="#">Home</a></li>
                     <li><a href="./about.html">About</a></li>
-                    <li><a href="#">Products</a></li>
+                    <li><a href="./products.html">Products</a></li>
                     <li><a href="#">Blog</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
